// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0 models to download (network failure), 0 models downloaded and no model in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginVertical": 16,
        }
      }
      variant="h4"
    >
      screens.models.availableToDownload
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "paddingVertical": 32,
        }
      }
    >
      <Text
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        screens.models.errorCannotGetModelsAtTheMoment
      </Text>
      <Button
        icon={
          {
            "androidIconName": "refresh",
            "iosIconName": "arrow.clockwise",
          }
        }
        onPress={[Function]}
        title="common.retry"
      />
    </View>
    <Text>
      screens.models.youHaveDownloadedAllTheModels
    </Text>
  </View>
</RCTScrollView>
`;

exports[`0 models to download (network failure), 1 model downloaded and 1 in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginBottom": 16,
        }
      }
      variant="h4"
    >
      screens.models.inUse
    </Text>
    <ModelCard
      isSelected={true}
      model={
        {
          "audioIngestion": false,
          "author": "Author",
          "family": "Family",
          "id": 10,
          "imageIngestion": false,
          "name": "Model 10",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
    />
    <Text
      style={
        {
          "marginVertical": 16,
        }
      }
      variant="h4"
    >
      screens.models.readyToUse
    </Text>
    <ListItem
      androidIconName="memory"
      iconBackgroundColor="#628395"
      iosIconName="cpu"
      onPress={[Function]}
      subtitle="screens.models.modelCount"
      title="screens.models.downloaded"
    />
    <Text
      style={
        {
          "marginVertical": 16,
        }
      }
      variant="h4"
    >
      screens.models.availableToDownload
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "paddingVertical": 32,
        }
      }
    >
      <Text
        style={
          {
            "marginBottom": 16,
          }
        }
      >
        screens.models.errorCannotGetModelsAtTheMoment
      </Text>
      <Button
        icon={
          {
            "androidIconName": "refresh",
            "iosIconName": "arrow.clockwise",
          }
        }
        onPress={[Function]}
        title="common.retry"
      />
    </View>
    <Text>
      screens.models.youHaveDownloadedAllTheModels
    </Text>
  </View>
</RCTScrollView>
`;

exports[`2 models to download, 2 models downloaded and 1 in use 1`] = `
<RCTScrollView
  contentInsetAdjustmentBehavior="automatic"
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View>
    <Text
      style={
        {
          "marginBottom": 16,
        }
      }
      variant="h4"
    >
      screens.models.inUse
    </Text>
    <ModelCard
      isSelected={true}
      model={
        {
          "audioIngestion": false,
          "author": "Author",
          "family": "Family",
          "id": 10,
          "imageIngestion": false,
          "name": "Model 10",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
    />
    <Text
      style={
        {
          "marginVertical": 16,
        }
      }
      variant="h4"
    >
      screens.models.readyToUse
    </Text>
    <ListItem
      androidIconName="memory"
      iconBackgroundColor="#628395"
      iosIconName="cpu"
      onPress={[Function]}
      subtitle="screens.models.modelCount"
      title="screens.models.downloaded"
    />
    <Text
      style={
        {
          "marginVertical": 16,
        }
      }
      variant="h4"
    >
      screens.models.availableToDownload
    </Text>
    <ModelCard
      model={
        {
          "audioIngestion": false,
          "author": "Author",
          "family": "Family",
          "id": 20,
          "imageIngestion": false,
          "name": "Model 20",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
      onPress={[Function]}
    />
    <ModelCard
      model={
        {
          "audioIngestion": false,
          "author": "Author",
          "family": "Family",
          "id": 21,
          "imageIngestion": false,
          "name": "Model 21",
          "parameterCountBillions": 1,
          "parts": [],
          "pipeline": "textGeneration",
          "sizeGB": 1,
          "tags": [],
          "thinking": false,
        }
      }
      onPress={[Function]}
    />
  </View>
</RCTScrollView>
`;
